# iconfonts

./: .gitmodules  CMakeLists.txt  README.md
cmake/: FindPythonModules.cmake  IconFonts.cmake  IconFontsAssert.cmake  IconFontsChrono.cmake  IconFontsCodeGenerator.cmake  IconFontsNetwork.cmake  IconFontsParser.cmake  IconFontsPython.cmake  IconFontsScriptMode.cmake  IconFontsStrings.cmake  IconFontsUtilities.cmake  iconfontsconfig.h.in  iconfontsregistry.cpp.in  iconfontstool.py  quicksymbol.h.in  staticfontinfo.cpp.in  staticfontinfo.h.in
iconfonts/: CMakeLists.txt  iconfonts.cpp  iconfonts.h  iconfonts_p.h  quickiconfonts.cpp  quickiconfonts.h
iconfonts/qml/: FontIcon.qml
iconfontsviewer/: CMakeLists.txt  fontlistwidget.cpp  fontlistwidget.h  fontsizespinbox.cpp  fontsizespinbox.h  iconpreview.cpp  iconpreview.h  main.cpp  mainwindow.cpp  mainwindow.h  quickpreview.cpp  quickpreview.h  symbollistwidget.cpp  symbollistwidget.h
iconfontsviewer/qml/: QuickPreview.qml
tests/: CMakeLists.txt  tst_glyphsrenderable.cpp  tst_iconfonts.cpp  tst_quickiconfonts.cpp  tst_quickiconfonts.qml  tst_quicktests.cpp
